# packMeUp

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  package.json  pyproject.toml  run_tests.sh  setup_precommit.sh
.ai/: prd.md  tech_stack.md
.cursor/rules/: astro.mdc  fastapi.mdc  frontend.mdc  mermaid-diagram-auth.mdc  mermaid-diagram-journey.mdc  mermaid-diagram-ui.mdc  playwright.mdc  pytest.mdc  shared.mdc
.github/: README.md
.github/actions/setup-backend/: action.yml
.github/actions/setup-frontend/: action.yml
.github/workflows/: build.yml  master.yml  tests.yml
backend/: FastAPI_SQLAlchemy-0.2.1.post1-py3-none-any.whl  alembic.ini  crud.py  pyproject.toml  settings.py
backend/app/: config.py  crud.py  local_settings.py  main.py  models.py  settings.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 368bf398aaba_.py  7241e3b8feb0_add_active_sessions_table.py
backend/app/api/: auth.py  dto.py  generated_lists.py  special_lists.py  trips.py
backend/app/middleware/: auth.py  error_handler.py
backend/app/schemas/: special_lists.py
backend/app/scripts/: create_user.py
backend/app/services/: ai_service.py  auth_service.py  constants.py  openrouter_service.py  special_list_service.py  special_lists.py  trip_service.py  user_service.py
backend/tests/: README.md  conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_auth_api.py  test_auth_service.py  test_sample.py  test_user_service.py
docs/: mvp.md
docs/.ai/: api-plan.md  auth-spec.md  claude-test-plan.md  cleanup-action-plan.md  db-plan.md  gemini-test-plan.md  generated-list-implementation-plan.md  migration_to_minimal_astro.md  new-trip-view-implementation-plan.md  onboarding.md  prd.md  removing_astro_migration_plan.md  sample_curl_requests.md  sample_special_lists_curl_requests.md  tech_stack.md  trips-implementation-plan.md  ui-plan.md
docs/.ai/diagrams/: auth.md  journey.md  ui.md
docs/old/: openrouter-service-implementation-plan.md  special-list-implementation-plan.md
frontend/: .gitignore  astro.config.mjs  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/.astro/: data-store.json  settings.json
frontend/playwright/report/: index.html
frontend/playwright/tests/: example.spec.ts
frontend/src/: App.tsx  middleware.ts  types.ts
frontend/src/components/: NewTripPage.tsx
frontend/src/components/__tests__/: sample.test.tsx
frontend/src/components/auth/: AuthWrapper.tsx  AuthenticatedRoute.tsx  LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx  ResetPasswordForm.tsx
frontend/src/components/dashboard/: DashboardHome.tsx  DashboardLayout.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/new-trip/: FormNavigation.tsx  NewTripPage.tsx  Step1BasicInfo.tsx  Step2Preferences.tsx  Step3Luggage.tsx  StepIndicator.tsx  types.ts
frontend/src/components/packing-list/: PackingList.tsx  PackingLists.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  link.tsx  navigation.tsx  pagination.tsx  select.tsx  tabs.tsx  theme-guide.tsx  theme-provider.tsx  use-toast.ts
frontend/src/layouts/: AuthLayout.astro  BaseLayout.astro  GuestLayout.astro  ReactAppLayout.astro
frontend/src/lib/: api-client.ts
frontend/src/lib/api/: client.ts
frontend/src/lib/auth/: session.ts
frontend/src/lib/hooks/: useAuth.tsx
frontend/src/lib/interceptors/: auth.interceptor.ts
frontend/src/lib/providers/: AuthProvider.tsx
frontend/src/lib/services/: auth.service.ts  authService.ts
frontend/src/lib/types/: auth.ts
frontend/src/pages/: [...slug].astro  dashboard.astro  index.astro  login.astro  new-trip.astro  register.astro  reset-password.astro
frontend/src/pages/generated-lists/: [listId].astro
frontend/src/pages/trips/[tripId]/lists/: [listId].astro
frontend/src/styles/: global.css  globals.css
frontend/src/types/: auth.ts
frontend/tests/: README.md  setup.ts
