[project]
name = "pack-me-up"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fastapi-sqlalchemy>=0.2.1",
    "fastapi[standard]>=0.115.12",
    "gunicorn>=23.0.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "uvicorn>=0.34.1",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


[dependency-groups]
dev = [
    "ruff>=0.11.5",
]

[tool.isort]
profile = "black"
skip = [
    ".venv",
    "venv",
    "node_modules"
]

[tool.mypy]
python_version = "3.11"
allow_untyped_globals = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
select = [
    "E",
    "F401",
    "F403",
    "F404",
    "F406",
    "F407",
    "F821",
    "F822",
    "F823",
    "F842",
    "D",
    "D404",
    "D401",
    "D403",
    "D417"
]
ignore = [
    "E402",
    "E501",
    "E713",
    "E714",
    "E721",
    "E722",
    "E731",
    "E741",
    # Ignore mandatory docstrings
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    # Ignore whitespace issuses around the docstring
    "D202",
    "D203",
    # Allow starting multi-line docstring on both the 1st or 2nd line
    "D212",
    "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
